# C-Otus-Proffesional

./: CMakeLists.txt  FileVithVersion.h.in  Main.cpp  README.md  lib.h  main.cpp
.github/workflows/: blank.yml
